--- a/c2/estadistica_desc/formulario_Lhuatay/formulario.tex
+++ b/c2/estadistica_desc/formulario_Lhuatay/formulario.tex
@@ -1,7 +1,5 @@
 \documentclass[11pt, a4paper]{article}
 \usepackage[a4paper, margin=1cm]{geometry}
-\setlength{\headheight}{17.74934pt}
-\addtolength{\topmargin}{-5.74934pt}
 \usepackage[spanish]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{tikz}
@@ -14,39 +12,266 @@
 \usepackage{multicol}
 \usepackage{cancel}
 \usepackage{pgfplots}
+\usepackage{setspace}
 \pgfplotsset{compat=1.18}
 \setlength{\parskip}{1em}
 \setlength{\parindent}{0pt}
+\setstretch{0.6}
+
+\newenvironment{tablaDeEjemplo}{}{}
+\newenvironment{marcaDeClase}{}{}
+\newenvironment{frecuenciaAbsoluta}{}{}
+\newenvironment{frecuenciaRelativa}{}{}
+\newenvironment{construccionDeClases}{}{}
+\newenvironment{mediaAritmetica}{}{}
+\newenvironment{medianaDatosAgrupados}{}{}
+\newenvironment{modaDatosAgrupados}{}{}
+\newenvironment{varianciaYDesviacionEstandar}{}{}
+\newenvironment{coeficienteDeVariacion}{}{}
+\newenvironment{cuantiles}{}{}
+
 \begin{document}
-\section{Formulario de Estadística}
+
+\pagenumbering{gobble}
+
+\textbf{\large{Formulario de Estadística}}
 \begin{multicols}{2}
-    Dado el cuadro de datos:
-    \begin{center}
-        \begin{tabular}{|c|c|c|c|c|c|}
-            \hline
-            $Clases$ & $x_i$ & $f_i$ & $F_i$ & $h_i$ \% & $H_i$ \% \\
-            \hline
-            [3.3, 3.8) & 3.55 & 3  & 3  & 7.5 \%  & 7.5 \%  \\
-
-            [3.8, 4.3) & 4.05 & 8  & 11 & 20 \%   & 27.5 \% \\
-
-            [4.3, 4.8) & 4.55 & 14 & 25 & 35 \%   & 62.5 \% \\
-
-            [4.8, 5.3) & 5.05 & 6  & 31 & 15 \%   & 77.5 \% \\
-
-            [5.3, 5.8) & 5.55 & 4  & 35 & 10 \%   & 87.5 \% \\
-
-            [5.8, 6.3) & 6.05 & 5  & 40 & 12.5 \% & 100 \%  \\
-            \hline
-        \end{tabular}
-    \end{center}
-    \textbf{Donde:} \\
-        $x_i$: Marca de clase (valor del dato). \\
-        $f_i$: Frecuencia absoluta. (Cuántas veces se repite tal dato)\\
-        $F_i$: Frecuencia acumulada. \\
-        $h_i$: Frecuencia relativa. \\
-        $H_i$: Frecuencia acumulada relativa. \\
-    \textbf{Considerese:} \\
-        $n = 40$ \text{ (Total de datos)} \\ato)\\
+    \begin{tablaDeEjemplo}
+        Dado el cuadro de datos:
+        \begin{center}
+            \begin{tabular}{|c|c|c|c|c|c|}
+                \hline
+                $Clases$ & $x_i$ & $f_i$ & $F_i$ & $h_i$ \% & $H_i$ \% \\
+                \hline
+                [3.3, 3.8) & 3.55 & 3  & 3  & 7.5 \%  & 7.5 \%  \\
+    
+                [3.8, 4.3) & 4.05 & 8  & 11 & 20 \%   & 27.5 \% \\
+    
+                [4.3, 4.8) & 4.55 & 14 & 25 & 35 \%   & 62.5 \% \\
+    
+                [4.8, 5.3) & 5.05 & 6  & 31 & 15 \%   & 77.5 \% \\
+    
+                [5.3, 5.8) & 5.55 & 4  & 35 & 10 \%   & 87.5 \% \\
+    
+                [5.8, 6.3) & 6.05 & 5  & 40 & 12.5 \% & 100 \%  \\
+                \hline
+            \end{tabular}
+        \end{center}
+        \textbf{Donde:}
+        \begin{itemize}
+            \item $x_i$: Marca de clase (valor del dato).
+            \item $f_i$: Frecuencia absoluta.
+            \item $F_i$: Frecuencia acumulada.
+            \item $h_i$: Frecuencia relativa.
+            \item $H_i$: Frecuencia acumulada relativa.
+        \end{itemize}        
+        \textbf{Considerese:}
+            \fbox{$n = 40$} \text{ (Total de datos)}
+    \end{tablaDeEjemplo}
+    \begin{marcaDeClase}
+        \begin{center}
+            \textbf{\large Marca de Clase: $x_i$}
+            \hrulefill
+            \begin{equation*}
+                x_i = \frac{L_i + L_s}{2}
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $L_i$: Límite inferior de la clase.
+            \item $L_s$: Límite superior de la clase.
+        \end{itemize}
+        \textbf{Nota:}
+        La marca de clase es el valor del dato, en el caso de datos agrupados y contínuos se calcula de dicha manera, sin embargo, cuando los valores son discretos o cualitativos, la marca de clase es el valor del dato en sí mismo.
+    \end{marcaDeClase}
+    \begin{frecuenciaAbsoluta}
+        \begin{center}
+            \textbf{\large Frecuencia Absoluta: $f_i$}
+            \hrulefill
+            \begin{equation*}
+                f_i = \sum_{i=1}^{n} x_i
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $n$: Total de datos.
+            \item $x_i$: Marca de clase.
+        \end{itemize}
+        \textbf{Nota:}
+        La frecuencia absoluta es la cantidad de veces que se repite un mismo dato de la muestra.
+    \end{frecuenciaAbsoluta}
+    \begin{frecuenciaRelativa}
+        \begin{center}
+            \textbf{\large Frecuencia Relativa: $h_i$}
+            \hrulefill
+            \begin{equation*}
+                h_i = \frac{f_i}{n} \times 100
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $f_i$: Frecuencia absoluta.
+            \item $n$: Total de datos.
+        \end{itemize}
+        \textbf{Nota:}
+        Se muestra la frecuencia relativa porcentual, generalmente la más usada. Puede que se solicite en algún caso particular la frecuencia relativa en forma decimal.
+    \end{frecuenciaRelativa}
+    \begin{construccionDeClases}
+        \begin{center}
+            \textbf{\large Construcción de Clases}
+            \hrulefill
+            \begin{equation*}
+                R = x_{max} - x_{min}
+            \end{equation*}
+            \begin{equation*}
+                k = 1 + 3.322 \times \log_{10}(n)
+            \end{equation*}
+            \begin{equation*}
+                A = \frac{R}{k} = C
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $R$: Rango de la muestra.
+            \item $x_{max}$: Máximo valor de la muestra.
+            \item $x_{min}$: Mínimo valor de la muestra.
+            \item $n$: Total de datos.
+            \item $k$: Número de clases.
+            \item $A, C$: Amplitud o ancho de clase.
+        \end{itemize}
+        \textbf{Nota:}
+        Esta parte del formulario indica el proceso que se debe tomar para determinar, dado un conjunto de datos contínuos, la cantidad de clases y el ancho de las mismas, esto con el objetivo de calcular las medidas pertinentes.
+    \end{construccionDeClases}
+    \begin{mediaAritmetica}
+        \begin{center}
+            \textbf{\large Media Aritmética: $\bar{x}$}
+            \hrulefill
+            \begin{equation*}
+                \bar{x} = \frac{\sum\limits_{i=1}^{n} x_i \cdot f_i}{n}
+                \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $x_i$: Marca de clase.
+            \item $f_i$: Frecuencia absoluta.
+            \item $n$: Total de datos.
+        \end{itemize}
+        \textbf{Nota:}
+        La media aritmética es el promedio de los datos, se calcula multiplicando cada dato por su frecuencia y dividiendo la suma de estos entre el total de datos.
+    \end{mediaAritmetica}
+    \begin{medianaDatosAgrupados}
+        \begin{center}
+            \textbf{\large Mediana de Datos Agrupados}
+            \hrulefill
+            \begin{equation*}
+                Me = L_i + \left( \frac{\frac{n}{2} - F_{i-1}}{f_i} \right) \cdot C
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $L_i$: Límite inferior de la clase.
+            \item $F_{i-1}$: Frecuencia acumulada anterior.
+            \item $f_i$: Frecuencia absoluta.
+            \item $C$: Ancho de clase.
+            \item $n$: Total de datos.
+        \end{itemize}
+        \textbf{Nota:}
+        La mediana es el valor que divide a la muestra en dos partes iguales, se calcula con la fórmula anterior, donde se busca la clase que contiene la mediana y se despeja el valor de la misma. En esta fórmula se escoge la clase que contiene a la mediana escogiendo al $F_i$ que contenga a $\dfrac{n}{2}$
+    \end{medianaDatosAgrupados}
+    \pagebreak
+    \begin{modaDatosAgrupados}
+        \begin{center}
+            \textbf{\large Moda de Datos Agrupados}
+            \hrulefill
+            \begin{equation*}
+                Mo = L_i + \left( \frac{f_i - f_{i-1}}{2f_i - f_{i-1} - f_{i+1}} \right) \cdot C
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $L_i$: Límite inferior de la clase.
+            \item $f_i$: Frecuencia absoluta.
+            \item $f_{i-1}$: Frecuencia absoluta anterior.
+            \item $f_{i+1}$: Frecuencia absoluta siguiente.
+            \item $C$: Ancho de clase.
+        \end{itemize}
+        \textbf{Nota:}
+        La moda es el valor que más se repite en la muestra, se calcula con la fórmula anterior, donde se busca la clase que contiene a la moda y se despeja el valor de la misma. En esta fórmula se escoge la clase que contiene a la moda aligiendo al $f_i$ más grande.
+    \end{modaDatosAgrupados}
+    \begin{varianciaYDesviacionEstandar}
+        \begin{center}
+            \textbf{\large Variancia y Desviación Estándar}
+            \hrulefill
+            \begin{equation*}
+                S^2 = \frac{\sum\limits_{i=1}^{n} (x_i - \bar{x})^2 \cdot f_i}{n-1}
+            \end{equation*}
+            \begin{equation*}
+                S = \sqrt{S^2}
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $x_i$: Marca de clase.
+            \item $\bar{x}$: Media aritmética.
+            \item $f_i$: Frecuencia absoluta.
+            \item $n$: Total de datos.
+        \end{itemize}
+        \textbf{Nota:}
+        La variancia es una medida de dispersión que indica cuánto se alejan los datos de la media, se calcula con la fórmula anterior. La desviación estándar es la raíz cuadrada de la variancia.
+    \end{varianciaYDesviacionEstandar}
+    \begin{coeficienteDeVariacion}
+        \begin{center}
+            \textbf{\large Coeficiente de Variación}
+            \hrulefill
+            \begin{equation*}
+                CV = \frac{S}{\bar{x}} \times 100
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $S$: Desviación estándar.
+            \item $\bar{x}$: Media aritmética.
+        \end{itemize}
+        Además:
+        \begin{itemize}
+            \item $CV < 10 \%$: Datos homogéneos.
+            \item $10 \% \leq CV < 30 \%$: Variabilidad aceptable.
+            \item $CV \geq 30 \%$: Datos heterogéneos.
+        \end{itemize}
+        \textbf{Nota:}
+        El coeficiente de variación es una medida de dispersión relativa, se calcula con la fórmula anterior, se expresa en porcentaje y se interpreta como el porcentaje de variabilidad que tiene la muestra en relación a la media.
+    \end{coeficienteDeVariacion}
+    \vspace{2cm}
+    \begin{cuantiles}
+        \begin{center}
+            \textbf{\large Cuantiles}
+            \hrulefill
+            \begin{equation*}
+                Q_p = L_i + \left( \dfrac{\dfrac{p \cdot n}{\%} - F_{i-1}}{f_i} \right) \cdot C
+            \end{equation*}
+        \end{center}
+        \vspace{-1cm}
+        Donde:
+        \begin{itemize}
+            \item $L_i$: Límite inferior de la clase.
+            \item $F_{i-1}$: Frecuencia acumulada anterior.
+            \item $p$: Porcentaje del cuantil.
+            \item $C$: Ancho de clase.
+            \item $n$: Total de datos.
+            \item $\%$: Valor del cuantil (100, 10, 4)
+        \end{itemize}
+        \textbf{Nota:}
+        Los cuantiles son valores que dividen a la muestra en partes iguales, se calculan con la fórmula anterior, donde se busca la clase que contiene al cuantil y se despeja el valor del mismo. En esta fórmula se escoge la clase que contiene al cuantil escogiendo la clase de $F_i$ que contenga la posición dada por: $\dfrac{p \cdot n}{100}$.
+    \end{cuantiles}
+    \clearpage
 \end{multicols}
 \end{document}
