--- a/c2/estadistica_desc/formulario_Lhuatay/formulario.tex
+++ b/c2/estadistica_desc/formulario_Lhuatay/formulario.tex
@@ -35,6 +35,11 @@
 \pagenumbering{gobble}
 
 \textbf{\large{Formulario de Estadística}}
+\hfill
+\begin{minipage}[t]{3cm}
+    \centering 
+    \textit{Ing. Luis Huatay}
+\end{minipage}
 \begin{multicols}{2}
     \begin{tablaDeEjemplo}
         Dado el cuadro de datos:
