Avance del proyecto final de estadística

--- a/c2/estadistica_desc/proyecto_another/proyecto_final/InformeFinalEDP.tex
+++ b/c2/estadistica_desc/proyecto_another/proyecto_final/InformeFinalEDP.tex
@@ -48,13 +48,21 @@
   \large \textbf{Para el curso de Estadística descriptiva y probabilidad.}
 }
 \author{
-  \textbf{Autores aquí} \\
+  \begin{tabular}{ll}
+    \textbf{Aguilar Quispe, Tania} & \texttt{U24203198} \\
+    \textbf{Aranda Ramirez, Ángelo} & \texttt{U24219470} \\
+    \textbf{Huatay Salcedo, Luis} & \texttt{U24218809} \\
+    \textbf{Salgado Bravo, Gabriela} & \texttt{U24259007} \\
+    \textbf{Torres Vara, Mateo} & \texttt{U24308542} \\
+  \end{tabular} \\\\
+  \texttt{Sección 24229}
 }
 
 % ENVIROMENTS
 
 \newenvironment{indexPre}{}{}
 \newenvironment{introduccion}{}{}
+\newenvironment{marcoTeorico}{}{}
 \newenvironment{problematica}{}{}
 \newenvironment{objetivoGeneral}{}{}
 \newenvironment{terminosEstadisticos}{}{}
@@ -68,6 +76,7 @@
 \begin{center}
   Docente. Mg. Luis Fernando Velarde Vela  
 \end{center}
+
 \restoregeometry
 
 \newpage
@@ -82,6 +91,7 @@
     \noindent
     \begin{enumerate}
       \item Introducción
+      \item Marco Teórico
       \item Problemática
       \item Objetivo general
       \begin{enumerate}
@@ -117,6 +127,30 @@
 \end{introduccion}
 
 \vspace*{\fill}
+
+\newpage
+
+\begin{marcoTeorico}
+  \section{Marco Teórico}
+
+  \subsection{La estadística descriptiva}
+
+  La estadística descriptiva es una rama de la estadística que se encarga de recopilar, organizar, resumir y presentar datos de manera informativa. Su objetivo es describir las características de una población o muestra a través de medidas de tendencia central, como la media, mediana y moda, y medidas de dispersión, como la desviación estándar y el rango. La estadística descriptiva permite visualizar la información de forma clara y comprensible, facilitando la interpretación de los datos y la identificación de patrones y tendencias.
+
+  A fin de elaborar un correcto marco teórico se consideró pertienente consultar las fuentes bibliográficas adecuadas. De esta manera Vargas A. (1996) nos dice que la \textit{Estadística Descriptiva} es aquella que se encarga de resumir o descubrir numéricamente un conjunto de datos con el fin de facilitar su comprensión. Por otro lado, Gaviria y Márquez (2019) mencionan que la estadística descriptiva es una rama de la estadística que se encarga de recopilar, organizar, resumir y presentar datos de manera informativa.
+
+  \subsection{La IA en la educación}
+
+  La inteligencia artificial (IA) ha revolucionado la educación al ofrecer herramientas y recursos innovadores que facilitan el aprendizaje y la enseñanza. En el ámbito académico, la IA se utiliza para personalizar la educación, adaptando el contenido y la metodología de enseñanza a las necesidades individuales de los estudiantes. Además, las herramientas de IA permiten automatizar tareas repetitivas, como la corrección de exámenes o la generación de material educativo, liberando tiempo para actividades más creativas y colaborativas.
+
+  Según Moreno R. (2019) Nos dice: La IA tiene un fuerte potencial para acelerar el proceso de realización y desarrollo de los objetivos globales en torno a la educación mediante la reducción de las dificultades de acceso al aprendizaje, la automatización de los procesos de gestión y la optimización de los métodos que permiten mejorar los resultados en el aprendizaje.
+
+  \subsection{Los modelos NPL de Inteligencia Artificial}
+
+  Los modelos de procesamiento de lenguaje natural (NPL) son una rama de la inteligencia artificial que se enfoca en la interacción entre las computadoras y el lenguaje humano. Estos modelos utilizan algoritmos y técnicas de aprendizaje automático para analizar, comprender y generar texto de manera automatizada. Algunos ejemplos de modelos NPL ampliamente utilizados en la educación son GPT-4 (Generative Pre-trained Transformer 4) y BERT (Bidirectional Encoder Representations from Transformers), que permiten la creación de chatbots, sistemas de recomendación y herramientas de análisis de texto avanzadas.
+
+  Según Sigman, Blinkins (2023) La  IA  en  la  PNL  ha  facilitado  la  personalización  del  contenido  en  plataformas  en línea.   Los   sistemas   pueden   analizar   el   comportamiento   del   usuario   y   adaptar   las recomendaciones y el contenido de manera más precisa.
+\end{marcoTeorico}
 
 \newpage
 
@@ -393,9 +427,12 @@
 
   \section{Análisis Descriptivo}
 
-  A continuación, se presenta un análisis descriptivo de los datos recolectados sobre el rendimiento académico de los estudiantes de la UTP en relación con el uso de herramientas de inteligencia artificial. Se calculan de acuerdo a los temas vistos en clase.
+  Se presenta un análisis descriptivo de los datos recolectados sobre el rendimiento académico de los estudiantes de la UTP en relación con el uso de herramientas de inteligencia artificial. Se calculan de acuerdo a los temas vistos en clase.
+
+  Esta información es tomada de la encuesta realizada a los estudiantes de la UTP, en la cual se recopilaron datos sobre su género, carrera, edad, ciclo académico, motivos para utilizar herramientas de inteligencia artificial, percepción sobre el impacto de la IA en sus notas, nivel de confianza en los resultados de la IA, entre otros aspectos relevantes para el estudio.
 
   \subsection{Tabla de frecuencias}
+
   
 \end{analisisDescriptivo}
 
@@ -405,7 +442,17 @@
 
   \bibitem{Estadística} 
   Gaviria Peña, C., \& Márquez Fernández, C. A. (2019). \textit{Estadística descriptiva y probabilidad}. Editorial Bonaventuriano. 
+  
+  \bibitem{Vargas} 
+  Vargas Sabadías, A. (1995). \textit{Estadística descriptiva e inferencial}. Servicio de Publicaciones de la Universidad de Castilla-La Mancha, Cuenca.
+
+  \bibitem{Moreno} 
+  Moreno Padilla, R. D. (año). \textit{The arrival of artificial intelligence to education}. Universidad Tecnológica de Pereira. Recuperado de [Sci-Hub]
+
+  \bibitem{Sigman} 
+  Sigman, M., \& Bilinkis, S. (2024). \textit{Artificial. La nueva inteligencia y el contorno de lo humano}. TE \& ET, (37), 244-245. ISSN 1850-9959.
 
 \end{thebibliography}
+
   
 \end{document}
